[project]
name = "valorant-mcp-server"
version = "0.1.0"
description = "MCP Server for the Valorant Henrik Dev API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=1.26.0",
]

[project.scripts]
valorant-mcp-server = "valorant_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
